# playout

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml  mediamtx.yml  pyproject.toml  release-please-config.json  towncrier.toml
.github/linters/: .markdown-lint.yml
.github/workflows/: audit.yml  cdk8s-synth.yml  changelog-number.yml  changelog.yml  dev-image.yml  mirror-images.yml  pre-commit.yml  release-please.yml  release.yml  super-linter.yml  testing.yml
cdk8s/: config.py  main.py  playout_app.py  versions.yaml
changelog.d/: +deployment-environment-label.fix.md  +frame-gap-dts.fix.md  +otlp-metrics.added.md  +output-fps.added.md  +parity-harness.added.md  +platforms-self-discovery.changed.md  +prod-facebook-parked.added.md  +prod-passthrough.changed.md  +prod-twitch.added.md  +release-please-prod-pins.fix.md  +seek-verb.added.md  +telemetry-fleet-labels.fixed.md  25.fixed.md  29.added.md  30.added.md  31.changed.md  32.added.md  40.fixed.md  43.added.md  43.fixed.md  47.ci.md  48.added.md  50.fix.md  54.added.md  55.added.md  56.misc.md  59.added.md  62.fix.md  63.fix.md  66.fix.md  70.changed.md  71.added.md  76.fix.md  78.changed.md  88.fix.md  91.fix.md
src/: http.rs  main.rs  nats.rs  player.rs  telemetry.rs  watchdog.rs
tests/: behavior.rs  parity.rs
