[package]
name = "playout"
version = "0.2.0"
edition = "2024"
description = "Gapless dashcam playout server: one long-lived encoder, RTSP out"
license = "MIT"
repository = "https://github.com/adanalife/playout"
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.8.9"
gstreamer = "0.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
