[package]
name = "playout"
version = "0.6.1"
edition = "2024"
description = "Gapless dashcam playout server: one long-lived encoder, RTSP out"
license = "MIT"
repository = "https://github.com/adanalife/playout"
publish = false

[dependencies]
anyhow = "1.0"
async-nats = "0.49.1"
axum = "0.8.9"
futures = "0.3.32"
gstreamer = "0.25"
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.32.1", features = ["metrics"] }
# rustls transport instead of the native-tls default: no libssl in the
# runtime image (root certs come from its ca-certificates package).
sentry = { version = "0.48.5", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "0.48.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
